<resources>
    <string name="title_activity_capture_signature">Capturar assinatura do cliente</string>
    <string name="terminal_type_prompt">Escolha o terminal:</string>
    <string-array name="terminal_names">
        <item>Escolha o terminal</item>
        <item>Terminal Virtual Zoop</item>
        <item>Zoop Terminal</item>
    </string-array>
    <string name="title_activity_logged_user">Escolha o seller</string>
    <string name="title_activity_extra_card_info">ExtraCardInfoActivity</string>
    <string name="title_welcome_activity">Bem vindo</string>
    <string name="action_settings">Settings</string>
    <string name="checkbox_enable_developer_mode">Habilitar modo desenvolvedor</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_hint_username">Digite seu e-mail</string>
    <string name="login_label_signin_to_marketplace">Acesso ao seu marketplace</string>
    <string name="login_signin_button">Entrar</string>
    <string name="charge_label_choose_payment_device">1. Selecione o dispositivo de pagamento</string>
    <string name="charge_button_change_seller">Modificar seller</string>
    <string name="charge_label_choose_terminal">Escolha a maquininha</string>
    <string name="charge_label_choose_virtual_test_card">Cartão virtual de testes:</string>
    <string name="charge_label_request_terminal_payment">1. Solicitar cobrança usando maquininha</string>
    <string name="charge_label_amount_to_be_charged">1.1 Digite o valor a ser cobrado</string>
    <string name="charge_hint_type_value_with_decimals">Valor da venda</string>
    <string name="charge_label_choose_payment_action_below">Selecione a opção de pagamento</string>
    <string name="charge_button_credit_only">Crédito</string>
    <string name="charge_label_transaction_status">Registro da transação/ status:</string>
    <string name="charge_label_terminal_message">Mensagens:</string>
    <string name="charge_button_abort_charge">Cancelar</string>
    <string name="charge_label_transaction_approved_pane">Comprovante de Transação</string>
    <string name="charge_button_get_cardholder_signature">Obter assinatura do cliente</string>
    <string name="charge_hint_email_to_send_receipt">Endereço de e-mail</string>
    <string name="charge_hint_phone_number_to_send_receipt">Número de celular para envio de SMS</string>
    <string name="charge_button_send_receipt_via_email_or_sms">Enviar recibo por email e/ou SMS</string>
    <string name="charge_button_void_transaction">Cancelar Transação (Estorno)</string>
    <string name="charge_button_new_transaction">Novo Pagamento com Cartão</string>
    <string name="settings_label_username">Usuário</string>
    <string name="settings_label_select_seller">Escolha o seller:</string>
    <string name="settings_hint_search_seller_by_name_or_id">Escolher seller por nome ou id:</string>
    <string name="settings_button_select_seller">Selecione seller</string>
    <string name="settings_button_logout">Logout</string>
    <string name="signature_button_cancel">Cancelar</string>
    <string name="signature_button_clear">Limpar</string>
    <string name="signature_label_client_signature">Sua assinatura</string>
    <string name="signature_label_payment_agreement">Concordo em pagar a quantia abaixo ao comerciante, de acordo com o contrato do emissor do cartão.</string>
    <string name="login_label_loading_sellers_list">Carregando lista de sellers&#8230;</string>
    <string name="charge_button_charge_credit_with_installments">Crédito Parcelado</string>
    <string name="charge_button_charge_debit">Débito</string>
    <string name="charge_receipt_label_transaction_id">Zoop Id:</string>
    <string name="charge_receipt_label_transaction_timestamp">DATA:</string>
    <string name="charge_receipt_label_receipt">Comprovante de Transação</string>
    <string name="charge_receipt_delivery_options">Enviar recibo eletrônico para:</string>
    <string name="dialog_title_select_installment_option">Escolha a forma de pagamento:</string>
    <string name="message_charge_sent_to_customer">Cobrança solicitada à maquininha&#8230;</string>
    <string name="charge_receipt_label_transaction_uid">AID:</string>
    <string name="charge_receipt_label_transaction_arqc">ARQC:</string>
    <string name="charge_receipt_label_seller_name">EC:</string>
    <string name="login_label_signing_in">Registrando usuário. Aguarde&#8230;</string>
    <string name="charge_receipt_label_transaction_cardholder">CLIENTE:</string>
    <string name="charge_receipt_label_transaction_service_description">Serviço utilizado:</string>
    <string name="charge_receipt_label_transaction_total">VALOR:</string>
    <string name="charge_receipt_label_transaction_aut">AUTO:</string>
    <string name="charge_receipt_label_transaction_nsu">CV:</string>
    <string name="charge_label_checkbox_show_log">Visualizar registro de transação (log)</string>
    <string name="charge_label_currency_sign_small">R$</string>
    <string name="charge_status_message_bluetooth_pairing_problem">Não há uma maquininha conectada com esse dispositivo</string>
    <string name="charge_status_message_bluetooth_device_not_available">A maquininha está desligado ou fora de alcance (talvez sem bateria?)</string>
    <string name="charge_status_message_connection_not_available">Não foi possível conectar a rede Zoop pela Internet</string>
    <string name="charge_status_message_operation_aborted_by_user">Operação cancelada</string>
    <string name="charge_status_message_initiating_charge">Iniciando cobrança: </string>
    <string name="menu_void_transaction_activity">Cancelar transação</string>
    <string name="charge_button_void_last_transaction">Cancelar última transação</string>
    <string name="extra_information_label_cvc">Digite código de segurança do cartão:</string>
    <string name="extra_information_label_last_4_digits">Digite os 4 últimos digitos do cartão:</string>
    <string name="extra_information_label_expiration_date">Digite a data de expiração do cartão:</string>
    <string name="extrainfo_button_OK">OK</string>
    <string name="dialog_title_select_zoop_bluetooth_device">Selecione a maquininha que será utilizado:</string>
    <string name="label_version">Versão: </string>
    <string name="button_void_transaction_transation_voided">Transação cancelada.</string>
    <string name="toast_void_transaction_success">Transação cancelada com sucesso.</string>
    <string name="toast_void_transaction_fail">A transação não pode ser cancelada (E883).</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="time_format">hh:mm</string>
    <string name="datetime_format">hh:mm dd/MM/yyyy</string>
    <string name="label_loading_transactions_date_format">dd/MM/yyyy</string>
    <string name="button_cvc2_not_readable">CVC ilegível</string>
    <string name="button_cvc2_not_present">CVC inexistente</string>
    <string name="message_void_transaction_wait">Processando</string>
    <string name="message_void_transaction_cancel">Cancelar Estorno</string>
    <string name="title_activity_payments_list">Histórico de Transações</string>
    <string name="menu_settings_shwo_orders_list">Histórico de transações</string>
    <string name="label_payment_history_search_payments">"Procurar: "</string>
    <string name="hint_payment_history_search_payments">Procurar por nome, data, hora, etc</string>
    <string name="label_debit">Débito</string>
    <string name="label_credit">Crédito à Vista</string>
    <string name="label_credit_with_installments">Crédito Parcelado</string>
    <string name="label_credit_with_installments_comment">(Parcelado pelo vendedor)</string>
    <string name="label_back">Voltar</string>
    <string name="label_ok">OK</string>
    <string name="label_share">Compartilhar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_charge">Cobrar</string>
    <string name="label_next">Avançar</string>
    <string name="label_select_payment">Selecione o tipo de pagamento</string>
    <string name="title_activity_receipt">Recibo de venda</string>
    <string name="login_ime_action_label">Entrar</string>
    <string name="error_message_invalid_username_or_password">Usuário ou senha inválido</string>
    <string name="label_payments_list_transactions_singular">1 transação</string>
    <string name="label_payments_list_transactions_plural">[records] transações</string>
    <string name="label_payments_list_transactions_no_transactions">Nenhuma transação</string>
    <string name="label_payments_list_transactions_date_suffix_variable">em [date]</string>
    <string name="label_payments_list_transactions_date_suffix_today">hoje</string>
    <string name="number_of_installments">Número de parcelas</string>
    <string name="charge_type">Tipo de Venda</string>
    <string name="charge_with_installments">Venda parcelada</string>
    <string name="payment">Pagamento</string>
    <string name="message_select_payment_type">Selecione uma opção de pagamento</string>
    <string name="text_transaction_step1_initializing">Aguarde&#8230;</string>
    <string name="text_transaction_step2_insert_card">Insira ou passe o cartão no leitor</string>
    <string name="text_transaction_step3_processing">Processando&#8230; Não retire o cartão</string>
    <string name="text_transaction_step4_approved">Transação Aprovada</string>
    <string name="text_transaction_step4_denied">ERRO\nTransação negada</string>
    <string name="login_connection_error">Erro de conexão ao registrar usuário</string>
    <string name="login_unexpected_error">Erro inesperado durante o login</string>
    <string name="login_error">Falha ao realizar login, verifique seu email e senha</string>
    <string name="label_transaction_receipt">Comprovante</string>
    <string name="label_button_send_via_email">Enviar por E-mail</string>
    <string name="button_welcome_previous">Anterior</string>
    <string name="button_welcome_next">Próximo</string>
    <string name="label_printer_type_paper"> Papel:</string>
    <string name="label_printer_breakline"> Quebra de linha:</string>
   	<string name="title_activity_methods_payment">Métodos de pagamento</string>
    <string name="payment_option_activity_config">Ativar as opções de pagamento:</string>
	<string name="payment_option_deb_activity_config">Débito</string>
	<string name="payment_option_cred_activity_config">Crédito</string>
    <string name="payment_option_credit_installments_activity_config">Crédito Parcelado</string>
	<string name="title_feedback">Reclamações e sugestões</string>
	<string name="feedback_nome">Nome:</string>
	<string name="feedback_data">Data:</string>
	<string name="feedback_tipo">Tipo:</string>
    <string name="feedback_mensagem">Mensagem:</string>
	<string name="feedback_enviar">Enviar</string>
    <string name="button_terminal_configuration_finished">OK</string>
    <string name="label_printer_configuration_text">Configuração de Impressora</string>
    <string name="label_select_available_printer">Selecione uma impressora da lista</string>
    <string name="label_currently_selected_printer_on_configprinter">A Impressora [btName] está selecionada.</string>
    <string name="bluetooth_discovering_compatible_printer">Procurando impressoras</string>
    <string name="buyer_name">Nome do Comprador</string>
    <string name="buyer_description">Descrição da venda</string>
    <string name="buyer_address">Endereço</string>
    <string name="buyer_email">Email</string>
    <string name="buyer_taxpayer_id">CPF</string>
    <string name="buyer_address_number">Número</string>
    <string name="buyer_address_complement">Complemento</string>
    <string name="buyer_address_city">Cidade</string>
    <string name="buyer_address_state">Estado</string>
    <string name="buyer_address_postal_code">Cep</string>
    <string name="buyer_address_neighborhood">Bairro</string>
    <string name="buyer_address_country">País</string>
</resources>