<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:weightSum="1"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"

        android:orientation="vertical">



    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_margin="10dp"
                android:textStyle="bold" 
        android:gravity="center"
        
        android:layout_height="wrap_content"
        android:text="@string/title_feedback"/>

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/feedback_nome" />
	    
	     <EditText
            android:id="@+id/edtnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="@drawable/edit_text_layout"

             android:ems="10" />
	

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/feedback_data" />
	    
	     <EditText
            android:id="@+id/datafeedback"
            android:editable="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="@drawable/edit_text_layout"

             android:ems="10" />
	

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_tipo" />

        <Spinner
            android:id="@+id/tipo_feedback"
            android:layout_width="match_parent"
            android:background="@drawable/spinner_bg"

            android:layout_height="wrap_content" />
       

        
             <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_mensagem" />

        <EditText
            android:id="@+id/msgFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edit_text_layout"

            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
</LinearLayout>
            <Button
            android:id="@+id/sendfeedback"
            style="@style/zbutton_zoop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_margin="20dp"

            android:text="@string/feedback_enviar" />
    
</LinearLayout>

