<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        layout="@layout/activity_loading" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/formPlan"
        android:orientation="vertical">
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginLeft="8dp"

            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_description"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buyer_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_name"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:id="@+id/buyer_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_email"

                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:id="@+id/buyer_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/buyer_taxpayer_id"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_taxpayer_id"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_postal_code"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_postal_code"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address"
                />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_number"
/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_number"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_complement"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_complement"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_neighborhood"
                />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_neighborhood"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_city"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_city"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_state"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_state"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/buyer_address_country"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buyer_address_country"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                </LinearLayout>
                </LinearLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:orientation="horizontal" >
                <Button
                    android:id="@+id/btnPrevious"
                    style="@style/zbutton_zoop"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="10dp"

                    android:text="@string/button_welcome_previous"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnNext"
                    style="@style/zbutton_zoop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/button_welcome_next"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    </LinearLayout>
      </LinearLayout>